Updates list model, more security WIP
